default routing strategy is path

--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -13,7 +13,7 @@ Custom pages can be rendered inside the [`<UserProfile />`][userprofile-ref] com
 
 To add a custom page to the [`<UserProfile />`][userprofile-ref] component, use the `<UserProfile.Page />` component.
 
-### Usage
+### `<UserProfile.Page />` Usage
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -28,7 +28,7 @@ To add a custom page to the [`<UserProfile />`][userprofile-ref] component, use 
       import { CustomIcon } from "../icons";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
               <CustomProfilePage />
           </UserProfile.Page>
@@ -47,7 +47,7 @@ To add a custom page to the [`<UserProfile />`][userprofile-ref] component, use 
       import { CustomIcon } from "../icons";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
               <CustomProfilePage />
           </UserProfile.Page>
@@ -69,7 +69,7 @@ To add a custom page to the [`<UserProfile />`][userprofile-ref] component, use 
       import { CustomIcon } from "../icons";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
               <CustomProfilePage />
           </UserProfile.Page>
@@ -91,7 +91,7 @@ To add a custom page to the [`<UserProfile />`][userprofile-ref] component, use 
 
     export default function UserProfilePage() {
       return (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
               <CustomProfilePage />
           </UserProfile.Page>
@@ -105,7 +105,7 @@ To add a custom page to the [`<UserProfile />`][userprofile-ref] component, use 
   </Tab>
 </Tabs>
 
-### Props
+### `<UserProfile.Page />` Props
 
 All props below are required.
 
@@ -120,7 +120,7 @@ All props below are required.
 
 You can add external links to the [`<UserProfile />`][userprofile-ref] navigation sidebar using the `<UserProfile.Link />` component.
 
-### Usage
+### `<UserProfile.Link />` Usage
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -134,7 +134,7 @@ You can add external links to the [`<UserProfile />`][userprofile-ref] navigatio
       import { CustomIcon } from "../icons";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
         </UserProfile>
       );
@@ -147,7 +147,7 @@ You can add external links to the [`<UserProfile />`][userprofile-ref] navigatio
       import { CustomIcon } from "../icons";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
         </UserProfile>
       );
@@ -163,7 +163,7 @@ You can add external links to the [`<UserProfile />`][userprofile-ref] navigatio
     import { CustomIcon } from "../icons";
 
     const UserProfilePage = () => (
-      <UserProfile path="/user-profile" routing="path">
+      <UserProfile path="/user-profile">
         <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
       </UserProfile>
     );
@@ -179,7 +179,7 @@ You can add external links to the [`<UserProfile />`][userprofile-ref] navigatio
 
     export default function UserProfilePage() {
       return (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
         </UserProfile>
       );
@@ -188,8 +188,7 @@ You can add external links to the [`<UserProfile />`][userprofile-ref] navigatio
   </Tab>
 </Tabs>
 
-
-### Props
+### `<UserProfile.Link />` Props
 
 All props below are required.
 
@@ -199,14 +198,11 @@ All props below are required.
 | `labelIcon` | `React.ReactElement` | An icon displayed next to the label in the navigation sidebar. |
 | `url` | `string` | The absolute or relative url to navigate to |
 
-
 ## Advanced use cases
 
 ### Reordering default routes
 
 If you want to reorder the default routes (`Account` and `Security`) in the `UserProfile` navigation sidebar, you can use the `<UserProfile.Page />` component with the `label` prop set to `'account'` or `'security'`. This will target the existing default page and allow you to rearrange it.
-
-### Usage
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -221,7 +217,7 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
       import { CustomIcon, Icon } from "../icons";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
               <MyCustomPageContent />
           </UserProfile.Page>
@@ -240,7 +236,7 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
       import { CustomIcon, Icon } from "../icons";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
               <MyCustomPageContent />
           </UserProfile.Page>
@@ -262,7 +258,7 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
       import { CustomIcon, Icon } from "../icons";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
               <MyCustomPageContent />
           </UserProfile.Page>
@@ -284,7 +280,7 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
 
     export default function UserProfilePage() {
       return (
-        <UserProfile path="/user-profile" routing="path">
+        <UserProfile path="/user-profile">
           <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
               <MyCustomPageContent />
           </UserProfile.Page>
@@ -310,8 +306,6 @@ It's important to note that the first page in the list will be rendered under th
 ### Using custom pages with the `<UserButton />` component
 
 If you are using the `<UserButton />` component with the default props (where the `UserProfile` opens as a modal), then you should also be providing these custom pages as children to the component (using the `<UserButton.UserProfilePage />` and `<UserButton.UserProfileLink />` components respectively).
-
-### Usage
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
