--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -16,7 +16,6 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
 
 ## Usage
 
-
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
     You can embed the `<UserProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
@@ -26,7 +25,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
       import { UserProfile } from "@clerk/nextjs";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path" />
+        <UserProfile path="/user-profile" />
       );
 
       export default UserProfilePage;
@@ -36,7 +35,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
       import { UserProfile } from "@clerk/nextjs";
 
       const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path" />
+        <UserProfile path="/user-profile" />
       );
 
       export default UserProfilePage;
@@ -49,7 +48,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
     import { UserProfile } from "@clerk/clerk-react";
 
     const UserProfilePage = () => (
-      <UserProfile path="/user-profile" routing="path" />
+      <UserProfile path="/user-profile" />
     );
 
     export default UserProfilePage;
@@ -61,7 +60,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
     import { UserProfile } from "@clerk/remix";
 
     export default function UserProfilePage() {
-      return <UserProfile path="/user" routing="path" />;
+      return <UserProfile path="/user" />;
     }
     ```
   </Tab>
@@ -75,8 +74,8 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-in. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />For example, `/sign-in`<br />This prop is ignored in hash- and virtual-based routing.|
 | `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved. <br />e.g. `{google: ['foo', 'bar'], github: ['qux']}`. |
 
 ## Customization
