--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -338,8 +338,8 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/user-profile`.<br />This prop is ignored in hash-based routing. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>For example, `/user-profile`<br />This prop is ignored in hash- and virtual-based routing. |
 | `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
 | `customPages` | <code>[CustomPage][custompage-ref][]</code> | An array of custom pages to add to the organization profile. |
 
