--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -295,7 +295,7 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. `/sign-in`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />`/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
 | `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
 | `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
