--- a/docs/references/nextjs/custom-signup-signin-pages.mdx
+++ b/docs/references/nextjs/custom-signup-signin-pages.mdx
@@ -8,7 +8,7 @@ description: Learn how to add custom sign-in and sign-up pages to your Next.js a
 Clerk offers a set of [prebuilt components](/docs/components/overview) and [custom flows](/docs/custom-flows/overview) that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This guide shows how you use the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components with the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#catch-all-segments).
 
 <Callout>
-    Just getting started with Clerk and Next.js? Check out the [quickstart tutorial](/docs/quickstarts/nextjs)!
+  Just getting started with Clerk and Next.js? Check out the [quickstart tutorial](/docs/quickstarts/nextjs)!
 </Callout>
 
 <Steps>
@@ -76,7 +76,7 @@ Visit your new custom pages locally at [localhost:3000/sign-in](http://localhost
 
 </Steps>
 
-# Next steps
+## Next steps
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
