--- a/docs/components/customization/organization-profile.mdx
+++ b/docs/components/customization/organization-profile.mdx
@@ -13,7 +13,7 @@ Custom pages can be rendered inside the [`<OrganizationProfile />`][orgprofile-r
 
 To add a custom page to the [`<OrganizationProfile />`][orgprofile-ref] component, use the `<OrganizationProfile.Page />` component.
 
-### Usage
+### `<OrganizationProfile.Page />` Usage
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -47,7 +47,7 @@ To add a custom page to the [`<OrganizationProfile />`][orgprofile-ref] componen
       import { CustomIcon } from "../icons";
 
       const OrganizationProfilePage = () => (
-        <OrganizationProfile path="/organization-profile" routing="path">
+        <OrganizationProfile path="/organization-profile">
           <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
               <CustomProfilePage />
           </OrganizationProfile.Page>
@@ -69,7 +69,7 @@ To add a custom page to the [`<OrganizationProfile />`][orgprofile-ref] componen
     import { CustomIcon } from "../icons";
 
     const OrganizationProfilePage = () => (
-      <OrganizationProfile path="/organization-profile" routing="path">
+      <OrganizationProfile path="/organization-profile">
         <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
             <CustomProfilePage />
         </OrganizationProfile.Page>
@@ -91,7 +91,7 @@ To add a custom page to the [`<OrganizationProfile />`][orgprofile-ref] componen
 
     export default function OrganizationProfilePage() {
     return (
-      <OrganizationProfile path="/organization-profile" routing="path">
+      <OrganizationProfile path="/organization-profile">
         <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
             <CustomProfilePage />
         </OrganizationProfile.Page>
@@ -105,7 +105,7 @@ To add a custom page to the [`<OrganizationProfile />`][orgprofile-ref] componen
   </Tab>
 </Tabs>
 
-### Props
+### `<OrganizationProfile.Page />` Props
 
 All props below are required.
 
@@ -120,7 +120,7 @@ All props below are required.
 
 You can add external links to the [`<OrganizationProfile />`][orgprofile-ref] navigation sidebar using the `<OrganizationProfile.Link />` component.
 
-### Usage
+### `<OrganizationProfile.Link />` Usage
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -134,7 +134,7 @@ You can add external links to the [`<OrganizationProfile />`][orgprofile-ref] na
       import { CustomIcon } from "../icons";
 
       const OrganizationProfilePage = () => (
-        <OrganizationProfile path="/organization-profile" routing="path">
+        <OrganizationProfile path="/organization-profile">
           <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
         </OrganizationProfile>
       );
@@ -147,7 +147,7 @@ You can add external links to the [`<OrganizationProfile />`][orgprofile-ref] na
       import { CustomIcon } from "../icons";
 
       const OrganizationProfilePage = () => (
-        <OrganizationProfile path="/organization-profile" routing="path">
+        <OrganizationProfile path="/organization-profile">
           <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
         </OrganizationProfile>
       );
@@ -188,8 +188,7 @@ You can add external links to the [`<OrganizationProfile />`][orgprofile-ref] na
   </Tab>
 </Tabs>
 
-
-### Props
+### `<OrganizationProfile.Link />` Props
 
 All props below are required.
 
@@ -199,14 +198,11 @@ All props below are required.
 | `labelIcon` | `React.ReactElement` | An icon displayed next to the label in the navigation sidebar. |
 | `url` | `string` | The absolute or relative url to navigate to. |
 
-
 ## Advanced use cases
 
 ### Reordering default routes
 
 If you want to reorder the default routes (`General` and `Members`) in the `OrganizationProfile` navigation sidebar, you can use the `<OrganizationProfile.Page />` component with the `label` prop set to `'general'` or `'members'`. This will target the existing default page and allow you to rearrange it.
-
-### Usage
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -310,8 +306,6 @@ It's important to note that the first page in the list will be rendered under th
 ### Using custom pages with the `<OrganizationSwitcher />` component
 
 If you are using the `<OrganizationSwitcher />` component with the default props (where the `OrganizationProfile` opens as a modal), then you should also be providing these custom pages as children to the component (using the `<OrganizationSwitcher.OrganizationProfilePage />` and `<OrganizationSwitcher.OrganizationProfileLink />` components respectively).
-
-### Usage
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
