--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -26,7 +26,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
 
       export default function OrganizationProfilePage() {
         return (
-          <OrganizationProfile routing='path' path="/organization-profile" />
+          <OrganizationProfile path="/organization-profile" />
         )
       }
       ```
@@ -36,7 +36,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
 
       export default function OrganizationProfilePage() {
         return (
-          <OrganizationProfile />
+          <OrganizationProfile path="/organization-profile" />
         )
       }
       ```
@@ -48,7 +48,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
     import { OrganizationProfile } from "@clerk/clerk-react";
 
     export default function OrganizationProfilePage() {
-      return <OrganizationProfile />;
+      return <OrganizationProfile path="/organization-profile" />;
     }
     ```
   </Tab>
@@ -58,7 +58,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
     import { OrganizationProfile } from "@clerk/remix";
 
     export default function OrganizationProfilePage() {
-      return <OrganizationProfile />;
+      return <OrganizationProfile path="/organization-profile" />;
     }
     ```
   </Tab>
@@ -72,7 +72,7 @@ All props below are optional.
 | --- | --- | --- |
 | `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used.<br />For example, `/create-org`<br />This prop is ignored in hash- and virtual-based routing. |
 | `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
 
 ## Customization
