--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -82,7 +82,7 @@ Clerk's React SDK gives you access to prebuilt [components](/docs/components/ove
 
 In your React project's root folder, you may have an `.env` file alongside `package.json` and other configuration files. If you don't see it, create it.
 
-Add the following code to your `.env.local` file to set your public and secret keys.
+Add the following code to your `.env` file to set your public key.
 
 **Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys), you can copy your publishable key below.
 
@@ -117,7 +117,6 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
   </React.StrictMode>,
 )
 ```
-
 
 ### Wrap your app in `<ClerkProvider />`
 
