--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -23,7 +23,7 @@ description: Learn how to integrate Clerk into your Convex application.
 
 # Integrate Convex with Clerk
 
-Convex is a backend-as-a-service (BAAS) platform that allows you to build applications without having to worry about the backend. Convex provides a GraphQL API, authentication, and a database. Paired with Clerk's user authentication and management features, you can build a powerful application with minimal effort.
+Convex is the full-stack TypeScript development platform. With Convex you get to build a backend with a provided realtime database, file storage, text search, scheduling and more. Paired with Clerk's user authentication and management features, you can build a powerful application with minimal effort.
 
 This tutorial assumes that you have already [set up a Clerk application](https://clerk.com/docs/quickstarts/setup-clerk) and a [React + Convex application](https://docs.convex.dev/quickstart/react). This tutorial will also assume that you have not added Clerk to your application yet.
 
