--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -75,7 +75,7 @@ The next step is to configure Convex with the issuer domain provided by Clerk. F
 
 In your `convex` folder, add an `auth.config.js` file with the following configuration:
 
-```ts title="convex/auth.config.js"
+```ts filename="convex/auth.config.js"
 export default {
   providers: [
     {
@@ -84,7 +84,6 @@ export default {
     },
   ]
 };
-```
 
 Replace the `domain` string with the **Issuer** URL you copied.
 
