--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -119,7 +119,7 @@ Add the following code to your `.env.local` file to set your public key.
 
 <InjectKeys>
 
-```sh filename=".env"
+```sh filename=".env.local"
 VITE_CLERK_PUBLISHABLE_KEY={{pub_key}}
 ```
 
