--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -155,7 +155,7 @@ Both Clerk and Convex have Provider components that are required to wrap your Re
 
 You may have already had a `<ConvexProvider>` configured. Be sure that `<ClerkProvider>` wraps `ConvexProviderWithClerk`, and that `useAuth` is passed to `ConvexProviderWithClerk`.
 
-```ts title="src/main.tsx"
+```ts filename="src/main.tsx"
 import React from "react";
 import ReactDOM from "react-dom/client";
 import App from "./App";
