--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -189,7 +189,7 @@ ReactDOM.createRoot(document.getElementById("root")!).render(
 You can access the user information from the JWT in Convex queries and mutations.
 Use the `ctx.auth.getUserIdentity()` which returns the parsed information from the JWT, or `null` if the client isn't authenticated.
 
-```ts title=convex/getUser.ts
+```ts filename=convex/getUser.ts
 import type { UserIdentity } from 'convex/server';
 import { query } from './_generated/server';
 
