--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -193,7 +193,7 @@ Use the `ctx.auth.getUserIdentity()` which returns the parsed information from t
 import type { UserIdentity } from 'convex/server';
 import { query } from './_generated/server';
 
-export default query(async (ctx): Promise<string | null> => {
+export default query(async (ctx) => {
   const user = await ctx.auth.getUserIdentity();
   
   if (user === null) {
