add missing step in 'you will learn' section

--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -19,6 +19,7 @@ description: Learn how to integrate Clerk into your Convex application.
 - Configure Convex with the Clerk issuer domain
 - Install and configure Clerk's React SDK
 - Configure the Clerk and Convex providers
+- Access user identity in Convex queries and mutations
 </TutorialHero>
 
 Convex is the full-stack TypeScript development platform. With Convex you get to build a backend with a provided realtime database, file storage, text search, scheduling and more. Paired with Clerk's user authentication and management features, you can build a powerful application with minimal effort.
