--- a/docs/organizations/custom-organization-switcher.mdx
+++ b/docs/organizations/custom-organization-switcher.mdx
@@ -10,34 +10,39 @@ If you need more control than what Clerk's prebuilt [`<OrganizationSwitcher />`]
 The following example shows how you can build an organization switcher in a Next.js application. It requires the installation of the [`react-select`](https://www.npmjs.com/package/react-select) package and the [`@emotion/react`](https://www.npmjs.com/package/@emotion/react) package. For your convenience, you can copy and paste the following into your terminal:
 
 <CodeBlockTabs type="terminal" options={["npm", "yarn", "pnpm"]}>
-```sh
+```sh filename="terminal"
 npm i react-select @emotion/react
 ```
 
-```sh
+```sh filename="terminal"
 yarn add react-select @emotion/react
 ```
 
-```sh
+```sh filename="terminal"
 pnpm add react-select @emotion/react
 ```
 </CodeBlockTabs>
 
-Then, create a new file called `OrganizationSwitcher.js` and paste the following code into it. You can place this file anywhere in your project, but in this example, it is placed in a folder called `components`.
+Then, create a new file called `OrganizationSwitcher.jsx` and paste the following code into it. You can place this file anywhere in your project, but in this example, it is placed in a folder called `components`.
 
-```jsx filename="components/OrganizationSwitcher.js"
+```tsx filename="app/components/OrganizationSwitcher.jsx"
+"use client"
+
 import { useOrganization, useOrganizationList } from '@clerk/nextjs';
 import Select from 'react-select';
 
-function createOrganizationOptions(organizationList) {
-  return organizationList.map(({ organization }) => ({
+function createOrganizationOptions(userMemberships) {
+  return userMemberships.data.map(({ organization }) => ({
     value: organization.id,
     label: organization.name
   }));
 }
 
 export default function CustomOrganizationSwitcher() {
-  const { setActive, organizationList, isLoaded } = useOrganizationList();
+  const { setActive, userMemberships, isLoaded } = useOrganizationList({
+    userMemberships: true,
+  });
+
   const { organization } = useOrganization();
 
   if (!isLoaded) {
@@ -54,7 +59,7 @@ export default function CustomOrganizationSwitcher() {
 
   return (
     <Select
-      options={createOrganizationOptions(organizationList)}
+      options={createOrganizationOptions(userMemberships)}
       onChange={handleOrgChange}
       value={{ value: organization.id, label: organization.name }}
     />
