add link to wherever clerk fapi is referenced

--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -95,4 +95,4 @@ Completes a custom OAuth flow started by calling either [`SignIn.authenticateWit
 function handleUnauthenticated(opts?: { broadcast: boolean }): Promise<unknown>;
 ```
 
-Handles a 401 response from Frontend API by refreshing the client and session object accordingly.
+Handles a 401 response from [Frontend API](https://clerk.com/docs/reference/frontend-api) by refreshing the client and session object accordingly.
