--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -74,7 +74,7 @@ Indicates when the [ClerkJS](/docs/references/javascript/overview) library has f
 function load(options?: ClerkOptions): Promise<void>;
 ```
 
-Initializes the `Clerk` object and loads all necessary environment configuration and instance settings from the Frontend API.
+Initializes the `Clerk` object and loads all necessary environment configuration and instance settings from the [Frontend API](https://clerk.com/docs/reference/frontend-api).
 
 It is absolutely necessary to call this method before using the `Clerk` object in your code. Refer to the [ClerkJS installation](/docs/quickstarts/javascript) guide for more details.
 
