--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -9,7 +9,7 @@ The `User` object holds all of the information for a single user of your applica
 
 A user can be contacted at their primary email address or primary phone number. They can have more than one registered email address, but only one of them will be their primary email address. This goes for phone numbers as well; a user can have more than one, but only one phone number will be their primary. At the same time, a user can also have one or more external accounts by connecting to [OAuth providers](/docs/authentication/social-connections/overview) such as Google, Apple, Facebook, and many more.
 
-Finally, a `User` object holds profile data like the user's name, profile picture, and a set of [metadata](/docs/users/metadata) that can be used internally to store arbitrary information. The metadata are split into `publicMetadata` and `privateMetadata`. Both types are set from the [Backend API](https://clerk.com/docs/reference/backend-api), but public metadata can also be accessed from the Frontend API.
+Finally, a `User` object holds profile data like the user's name, profile picture, and a set of [metadata](/docs/users/metadata) that can be used internally to store arbitrary information. The metadata are split into `publicMetadata` and `privateMetadata`. Both types are set from the [Backend API](https://clerk.com/docs/reference/backend-api), but public metadata can also be accessed from the [Frontend API](https://clerk.com/docs/reference/frontend-api).
 
 The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to help retrieve and update user information and authentication status.
 
@@ -47,8 +47,8 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 | `backupCodeEnabled` | `boolean` | A boolean indicating whether the user has enabled Backup codes. |
 | `createOrganizationEnabled` | `boolean` | A boolean indicating whether the organization creation is enabled for the user or not. |
 | `deleteSelfEnabled` | `boolean` | A boolean indicating whether the user is able to delete their own account or not. |
-| `publicMetadata` | `{[string]: any} \| null` | Metadata that can be read from the Frontend API and [Backend API](https://clerk.com/docs/reference/backend-api) and can be set only from the Backend API . |
-| `privateMetadata` | `{[string]: any} \| null` | Metadata that can be read and set only from the [Backend API](https://clerk.com/docs/reference/backend-api). |
+| `publicMetadata` | `{[string]: any} \| null` | Metadata that can be read from the Frontend API and Backend API and can be set only from the Backend API . |
+| `privateMetadata` | `{[string]: any} \| null` | Metadata that can be read and set only from the Backend API. |
 | `unsafeMetadata` | `{[string]: any} \| null` | Metadata that can be read and set from the Frontend API. One common use case for this attribute is to implement custom fields that will be attached to the `User` object.<br />Please note that there is also an `unsafeMetadata` attribute in the [`SignUp`](/docs/references/javascript/sign-up/sign-up) object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete. |
 | `lastSignInAt` | `Date` | Date when the user last signed in. May be empty if the user has never signed in. |
 | `createdAt` | `Date` | Date when the user was first created. |
