--- a/docs/security/xss-leak-protection.mdx
+++ b/docs/security/xss-leak-protection.mdx
@@ -11,7 +11,7 @@ XSS vulnerabilities are incredibly serious and we recommend you reference the [O
 
 Prevention is just one aspect of an effective security model, though. To prepare for the worst case scenario where an attack is successful, you should ensure your application is configured to minimize the attack's surface area.
 
-Clerk works to minimize the surface area by using HttpOnly cookies for authenticated requests to our Frontend API, so that credentials cannot be leaked during XSS attacks.
+Clerk works to minimize the surface area by using HttpOnly cookies for authenticated requests to our [Frontend API](https://clerk.com/docs/reference/frontend-api), so that credentials cannot be leaked during XSS attacks.
 
 ## What is a HttpOnly cookie?
 HttpOnly is a flag on the [Set-Cookie](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie) header that is issued by a server to set a cookie in the browser.
