--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -58,7 +58,7 @@ In the example below, the `<SignIn />` component is rendered to a `<div>` elemen
 
   clerk.mountSignIn(signInComponent, {
     appearance: {
-      baseTheme: dark
+      baseTheme: 'dark'
     }
   });
   ```
