--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -32,7 +32,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
 
     You will notice a `path` prop is being passed to the `SignUp />` component. This is because, by default, the `routing` strategy is set to `path`, requiring the `path` prop to be passed. In Next.js applications, you can either pass the `path` prop to the `<SignUp />` component, or you can define the `NEXT_PUBLIC_CLERK_SIGN_IN_URL` and `NEXT_PUBLIC_CLERK_SIGN_UP_URL` environment variables.
 
-    The example below shows how to mount the `<SignIn />` component on a page without a `path` prop. Select the `.env.local` tab to see an example of how to define the appropriate environment variables.
+    The example below shows how to mount the `<SignUp />` component on a page without a `path` prop. Select the `.env.local` tab to see an example of how to define the appropriate environment variables.
 
     <CodeBlockTabs options={["<SignUp /> without path prop", ".env.local"]}>
       ```jsx filename="/pages/sign-up/[[...index]].tsx"
