remove redundant copy

--- a/docs/organizations/custom-organization-switcher.mdx
+++ b/docs/organizations/custom-organization-switcher.mdx
@@ -7,7 +7,7 @@ description: Learn how to build a custom organization switcher using the useOrga
 
 If you need more control than what Clerk's prebuilt [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component provides, you can build your own organization switcher using the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook.
 
-The following example shows how you can build a custom organization switcher. For the sake of this guide, the example is written for Next.js App Router, but it is supported by any React meta framework, such as Remix or Gatsby. 
+The example below is written for Next.js App Router, but it is supported by any React meta framework, such as Remix or Gatsby. 
 
 To get started, create a new file called `OrganizationSwitcher.tsx` and paste the following code into it. You can place this file anywhere in your project, but in this example, it is placed in a folder called `components`.
 
