add p tag to Loading component

--- a/docs/organizations/custom-organization-switcher.mdx
+++ b/docs/organizations/custom-organization-switcher.mdx
@@ -24,7 +24,7 @@ export const CustomOrganizationSwitcher = () => {
   });
 
   if (!isLoaded) {
-    return <>Loading</>;
+    return <p>Loading</p>;
   }
 
   return (
